Streamlined the frame finding process. Removed readable streams from the package.json.

--- a/test/browser/framer.html
+++ b/test/browser/framer.html
@@ -9,7 +9,7 @@
         }</style>
     </head>
     <body>
-        <iframe src="http://127.0.0.1/postie/index.html" frameBorder="0" name="child-frame"></iframe>
+        <iframe src="http://127.0.0.1/postie/index.html" frameBorder="0" id="child-frame"></iframe>
         <script src="postie.js"></script>
         <script>
             var postie = Postie()
