Changes to how dist is built. Use browserify-middleware in support server.
Refs #1

--- a/tests/support/iframe.html
+++ b/tests/support/iframe.html
@@ -2,10 +2,6 @@
 <html>
     <head></head>
     <body>
-        <script src="postie.js"></script>
-        <script>
-            var postie = new Postie(parent)
-            postie.post('c')
-        </script>
+        <script src="iframe.js"></script>
     </body>
 </html>
